Fix return book functionality and update view logic
- Updated the return button in the book view to use the correct book ID.
- Added a seed.py file for seeding the database with initial data.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,7 @@
             <% else %>
                 <% borrowing = Borrowing.find_by(user: current_user, book: @book) %>
                 <% if borrowing %>
-                    <%= button_to 'Return Book', return_book_borrowing_path(borrowing), method: :delete, class: 'return-button' %>
+                    <%= button_to 'Return Book', return_book_borrowing_path(@book.id), method: :delete, class: 'return-button' %>
                 <% else %>
                     <p class='book-borrowed'><strong>Oops!</strong> This book is currently borrowed. Please check out our other available books!</p>  
                 <% end %>
