--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,5 +20,5 @@
         <% end %>
     </div>
 <% else %>
-    <p>You have not borrowed any books yet.</p>
+    <p class="no-books">You have not borrowed any books yet.</p>
 <% end %>
